--- a/Pymaceuticals/pymaceuticals_chelsea_pickett.ipynb
+++ b/Pymaceuticals/pymaceuticals_chelsea_pickett.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,10 +916,9 @@
    "source": [
     "# Using the aggregation method, produce the same summary statistics in a single line.\n",
     "\n",
-    "summary_tumor_table_agg = cleaned_combined_mouse_study_df.groupby('Drug Regimen')\n",
-    "                            .agg({'Tumor Volume (mm3)': ['mean', 'median', 'var', 'std', 'sem']})\n",
-    "summary_tumor_table_agg\n",
-    "\n"
+    "summary_tumor_table_agg = cleaned_combined_mouse_study_df.groupby('Drug Regimen')\\\n",
+    "                          .agg({'Tumor Volume (mm3)': ['mean', 'median', 'var', 'std', 'sem']})\n",
+    "summary_tumor_table_agg"
    ]
   },
   {
@@ -948,18 +947,6 @@
    "source": [
     "# Generate a bar plot showing the total number of timepoints for all mice tested for each drug regimen using Pandas.\n",
     "\n",
-    "# Split up our data into groups based upon 'Drug Regimen'\n",
-    "# drug_regimen_groups = cleaned_combined_mouse_study_df.groupby('Drug Regimen')\n",
-    "\n",
-    "# # Find out how many mice in each drug regimen\n",
-    "# mice_count = drug_regimen_groups['Timepoint'].count()\n",
-    "\n",
-    "# # Chart our data, give it a title, and label the axes\n",
-    "# mice_chart = mice_count.plot(kind=\"bar\", title=\"Timepoints for Mice Tested by Drug Regimen\")\n",
-    "# mice_chart.set_xlabel(\"Drug Regimen\")\n",
-    "# mice_chart.set_ylabel(\"Number of Mice Tested\")\n",
-    "\n",
-    "# how do you sort by result? This is sorted alphabetically by drug regimen name, why? how to change to y-axis result?\n",
     "mice_counts = cleaned_combined_mouse_study_df['Drug Regimen'].value_counts()\n",
     "mice_counts.plot(kind=\"bar\")\n",
     "plt.xlabel(\"Drug Regimen\")\n",
@@ -1002,7 +989,7 @@
     "plt.ylabel(\"Number of Mice Tested\")\n",
     "\n",
     "plt.show()\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -1325,44 +1312,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Put treatments into a list for a for loop (and later for plot labels)   \n",
-    "# drug_treatments = ['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']\n",
-    "# # Create empty list to fill with tumor vol data (for plotting)\n",
-    "# tumor_volume_data=[] \n",
-    "\n",
-    "# #Loop through each drug in the treatment list, locating the rows in the merged DataFrame\n",
-    "# # that correspond to each treatment. Append the resulting final tumor volumes for each drug to the empty list.\n",
-    "# # Locate the rows which contain mice on each drug and get the tumor volumes, add to list\n",
-    "# for drug_treatment in drug_treatments:\n",
-    "#     for i,row in tumor_vol_last_timepoint.iterrows():\n",
-    "#         cur_drug=row['Drug Regimen']\n",
-    "#         if cur_drug==drug_treatment:\n",
-    "#             tumor_volume=row['Tumor Volume (mm3)']\n",
-    "#             tumor_volume_data.append(tumor_volume)     \n",
-    "# print(tumor_volume_data)\n",
-    "\n",
-    "# quartiles = tumor_vol_last_timepoint['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
-    "# lowerq = quartiles[0.25]\n",
-    "# upperq = quartiles[0.75]\n",
-    "# iqr = upperq-lowerq \n",
-    "# print(f\"The IQR is: {iqr}\")\n",
-    "# lower_bound = lowerq - (1.5*iqr)\n",
-    "# upper_bound = upperq + (1.5*iqr)\n",
-    "# print(f\"Values below {lower_bound} could be outliers.\")\n",
-    "# print(f\"Values above {upper_bound} could be outliers.\") \n",
-    "\n",
-    "\n",
-    "# # # Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
-    "\n",
-    "# # # Determine outliers using upper and lower bounds  "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -1426,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1384,7 @@
        "<AxesSubplot:title={'center':'Capomulin Tumor Volume vs Mouse Weight'}, xlabel='Tumor Volume (mm3)', ylabel='Weight (g)'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1452,8 +1401,10 @@
    ],
    "source": [
     "# Generate a scatter plot of average tumor volume vs. mouse weight for the Capomulin regimen 1. filter for Capomulin, 2.\n",
-    "capomulin_tumor_vs_weight = cleaned_combined_mouse_study_df.loc[(cleaned_combined_mouse_study_df['Drug Regimen'] == 'Capomulin'),['Weight (g)','Tumor Volume (mm3)']]\n",
-    "capomulin_tumor_vs_weight.plot(kind='scatter', x='Tumor Volume (mm3)', y='Weight (g)', title='Capomulin Tumor Volume vs Mouse Weight')"
+    "capomulin_tumor_vs_weight = cleaned_combined_mouse_study_df.loc[(cleaned_combined_mouse_study_df['Drug Regimen'] == 'Capomulin'),\\\n",
+    "                            ['Weight (g)','Tumor Volume (mm3)']]\n",
+    "capomulin_tumor_vs_weight.plot(kind='scatter', x='Tumor Volume (mm3)', y='Weight (g)',\\\n",
+    "                               title='Capomulin Tumor Volume vs Mouse Weight')"
    ]
   },
   {
@@ -1499,9 +1450,6 @@
    "source": [
     "# Calculate the correlation coefficient and linear regression model \n",
     "# for mouse weight and average tumor volume for the Capomulin regimen\n",
-    "\n",
-    "# volume = cleaned_combined_mouse_study_df.iloc[:,2]\n",
-    "# weight = cleaned_combined_mouse_study_df.iloc[:,7]\n",
     "\n",
     "volume = cleaned_combined_mouse_study_df['Tumor Volume (mm3)']\n",
     "weight = cleaned_combined_mouse_study_df['Weight (g)']\n",
